--- a/index.html
+++ b/index.html
@@ -292,13 +292,19 @@
                                 </div>
                                 <div  data-aos="fade-right">
                                     <p>
-                                        Since beginning my journey as a Web Developer, I have greatly expanded my knowledge and improved efficiency, in both languages used and in the many tools I have added to my tool belt.
+                                        Throughout my journey as a Web Developer, I've undergone significant expansion of my knowledge base, 
+                                        enhancing both my proficiency in various programming languages and the array of tools I employ.
                                     </p>
                                     <p class="uk-margin-remove">
-                                        I have a diverse set of skills, ranging from HTML, CSS and JavaScript, all the way to PHP, SQLite and Firebase. Although my main area of expertise is in front-end development. I have a real passion for building pixel-perfect websites and apps that are intuitive, semantic and responsive.
+                                        My skill set is diverse, spanning from foundational languages like HTML, CSS, and JavaScript to more 
+                                        intricate systems such as PHP, SQLite, and Firebase. While my primary expertise lies in front-end development,
+                                         my true passion lies in crafting flawlessly detailed websites and apps, prioritizing intuitiveness, 
+                                         semantic structure, and responsiveness.
                                     </p>
                                     <p>
-                                        In addition to this, I have recently focused on expanding my skill set by diving into React. I have dedicated time to self-study, which has been bolstered by the completion of several online courses and hands-on project experience utilizing the library.
+                                        Moreover, I've recently directed my efforts towards mastering React. Through a combination of self-study 
+                                        and completion of multiple online courses, I've delved deep into this library. This endeavor has been 
+                                        complemented by hands-on project engagements, solidifying my understanding and application of React's capabilities.
                                     </p>
                                 </div>
                                 <div style="margin-top: -10px;">
@@ -308,113 +314,115 @@
                                 </div>
                             </div>
                         </div>
-                        <div>
-                            <div class="skills-section">
-                                <div id="skill_animation_trigger">
-
-                                    <div class="uk-margin">
-                                        HTML5
-                                        <div class="skills-bar">
-                                            <div id="js_skill" class="skill-level" data-skill-level="95%"></div>
-                                        </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        JavaScript
-                                        <div class="skills-bar">
-                                            <div id="js_skill" class="skill-level" data-skill-level="92%"></div>
-                                        </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        PHP
-                                        <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="75%"></div>
-                                        </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        React
-                                        <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="60%"></div>
-                                        </div>
-                                    </div>
-                                    <div class="uk-margin">
-                                        CSS3
-                                        <div class="skills-bar">
-                                            <div class="skill-level" data-skill-level="92%"></div>
-                                        </div>
-                                    </div>
-
-                                    <!--
-                                    <div class="uk-flex uk-flex-center" style="margin-top: 50px; margin-left: 120px;">
-                                        <div class="uk-position-relative">
-                                            <div class="ring">&lt;HTML5/&gt;
-                                                <span></span>
+                        <div class="uk-flex uk-flex-middle">
+                            <div class="uk-width-1-1">
+                                <div class="skills-section">
+                                    <div id="skill_animation_trigger">
+    
+                                        <div class="uk-margin">
+                                            HTML5
+                                            <div class="skills-bar">
+                                                <div id="js_skill" class="skill-level" data-skill-level="95%"></div>
                                             </div>
                                         </div>
-                                        <div class="uk-position-relative">
-                                            <div class="ring">JS();
-                                                <span></span>
+                                        <div class="uk-margin">
+                                            JavaScript
+                                            <div class="skills-bar">
+                                                <div id="js_skill" class="skill-level" data-skill-level="92%"></div>
                                             </div>
                                         </div>
+                                        <div class="uk-margin">
+                                            PHP
+                                            <div class="skills-bar">
+                                                <div class="skill-level" data-skill-level="75%"></div>
+                                            </div>
+                                        </div>
+                                        <div class="uk-margin">
+                                            React
+                                            <div class="skills-bar">
+                                                <div class="skill-level" data-skill-level="60%"></div>
+                                            </div>
+                                        </div>
+                                        <div class="uk-margin">
+                                            CSS3
+                                            <div class="skills-bar">
+                                                <div class="skill-level" data-skill-level="92%"></div>
+                                            </div>
+                                        </div>
+    
+                                        <!--
+                                        <div class="uk-flex uk-flex-center" style="margin-top: 50px; margin-left: 120px;">
+                                            <div class="uk-position-relative">
+                                                <div class="ring">&lt;HTML5/&gt;
+                                                    <span></span>
+                                                </div>
+                                            </div>
+                                            <div class="uk-position-relative">
+                                                <div class="ring">JS();
+                                                    <span></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="uk-flex uk-flex-center" style="margin-bottom: -50px; margin-left: 120px;">
+                                            <div class="uk-position-relative">
+                                                <div class="ring">&lt;?PHP ?&gt;
+                                                    <span></span>
+                                                </div>
+                                            </div>
+                                            <div class="uk-position-relative">
+                                                <div class="ring">React();
+                                                    <span></span>
+                                                </div>
+                                            </div>
+                                            <div class="uk-position-relative">
+                                                <div class="ring">.CSS3{}
+                                                    <span></span>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        -->
                                     </div>
-                                    <div class="uk-flex uk-flex-center" style="margin-bottom: -50px; margin-left: 120px;">
-                                        <div class="uk-position-relative">
-                                            <div class="ring">&lt;?PHP ?&gt;
-                                                <span></span>
-                                            </div>
-                                        </div>
-                                        <div class="uk-position-relative">
-                                            <div class="ring">React();
-                                                <span></span>
-                                            </div>
-                                        </div>
-                                        <div class="uk-position-relative">
-                                            <div class="ring">.CSS3{}
-                                                <span></span>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    -->
                                 </div>
-                            </div>
-                            <div class="experience-section">
-                                <div class="uk-padding-small experience-card" data-aos="zoom-out-left">
-                                    <div>
-                                        <div style="margin-bottom: -10px">
-                                            <span class="small-html-tags">
-                                                &lt;h4&gt;  
-                                            </span>
-                                        </div>
-                                        <h4 class="uk-margin-left">
-                                            Powered By Hakiu Ltd
-                                        </h4>
-                                        <div style="margin-top: -5px;">
-                                            <span class="small-html-tags">
-                                                &lt;/h4&gt;  
-                                            </span>
-                                        </div>
-                                    </div>
-                                    <div style="margin-top: -15px">
-                                        <div style="margin-bottom: -5px;">
-                                            <span class="small-html-tags">
-                                                &lt;p&gt;  
-                                            </span>
-                                        </div>
-                                        <div uk-grid class="uk-grid uk-child-width-1-2@s uk-margin-remove uk-grid-row-collapse">
-                                            <div>
-                                                <p class="uk-margin-remove">
-                                                    Web Developer
-                                                </p>
+                                <div class="experience-section">
+                                    <div class="uk-padding-small experience-card" data-aos="zoom-out-left">
+                                        <div>
+                                            <div style="margin-bottom: -10px">
+                                                <span class="small-html-tags">
+                                                    &lt;h4&gt;  
+                                                </span>
                                             </div>
-                                            <div>
-                                                <p class="uk-margin-remove-bottom uk-text-right@s uk-margin-right">
-                                                    May 2022 - Present
-                                                </p>
+                                            <h4 class="uk-margin-left">
+                                                Powered By Hakiu Ltd
+                                            </h4>
+                                            <div style="margin-top: -5px;">
+                                                <span class="small-html-tags">
+                                                    &lt;/h4&gt;  
+                                                </span>
                                             </div>
                                         </div>
-                                        <div style="margin-top: -5px;">
-                                            <span class="small-html-tags">
-                                                &lt;/p&gt;  
-                                            </span>
+                                        <div style="margin-top: -15px">
+                                            <div style="margin-bottom: -5px;">
+                                                <span class="small-html-tags">
+                                                    &lt;p&gt;  
+                                                </span>
+                                            </div>
+                                            <div uk-grid class="uk-grid uk-child-width-1-2@s uk-margin-remove uk-grid-row-collapse">
+                                                <div>
+                                                    <p class="uk-margin-remove">
+                                                        Web Developer
+                                                    </p>
+                                                </div>
+                                                <div>
+                                                    <p class="uk-margin-remove-bottom uk-text-right@s uk-margin-right">
+                                                        May 2022 - Present
+                                                    </p>
+                                                </div>
+                                            </div>
+                                            <div style="margin-top: -5px;">
+                                                <span class="small-html-tags">
+                                                    &lt;/p&gt;  
+                                                </span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
